--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    This is my resume Website.
+    <p>This is my resume Website. </p>
+    <p>My Name is Awadh Kishor Singh</p>
     
 </body>
 </html>
