--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <p>This is my resume Website. </p>
     <p>My Name is Awadh Kishor Singh</p>
+    <p>This is Third Commit.</p>
     
 </body>
 </html>
