--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <p>
         This is my sixth Commit
     </p>
-
+    <p>
+        This is my 8th commit.
+    </p>
+    
 
 </body>
 </html>
