--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
     </p>
     <p>tfdcygfcjyhfcyh</p>
 
+
+    <p>12th commit to check wheter two commits are working properly in two difeerent files.</p>
+
 </body>
 </html>
