--- a/index.html
+++ b/index.html
@@ -6,28 +6,51 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Awadh</h1>
-    <p>This is my resume Website. </p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, dignissimos! Accusantium deleniti dolorum repudiandae incidunt ratione molestiae odit illum dolore. Possimus libero voluptate voluptatem tenetur dignissimos. Velit nulla nostrum repudiandae!</p>
-    <!--  -->
-    <a ><link>awadh.vercel.app</link></a>
-
-    
-
-    <p>My Name is Awadh Kishor Singh</p>
-    <p>This is Third Commit.</p>
-    <p>This is called Fourth Commit </p>
-    <p>This is my fifth commit </p>
-    <p>
-        This is my sixth Commit
-    </p>
-    <p>
-        This is my 8th commit.
-    </p>
-    <p>tfdcygfcjyhfcyh</p>
+    <img src="myphoto.jpeg" alt="Awadh Image">
+<H1>AWADH KISHOR SINGH</H1>
+<!-- Iamge and Contact Details needed here.-->
+<h3>Profile</h3>
+<P>Eager and motivated, I am seeking a challenging entry-level position in tech industry to apply coding skills and knowledge. My goal is to contribute to a dynamic team and grow both professionally and personally.</P>
 
 
-    <p>12th commit to check wheter two commits are working properly in two difeerent files.</p>
+<hr>
+<H3>EDUCATION</H3>
+    <ol>
+        <li>Matriculation</li>
+        <ul>
+            <li>P.G Senior Secondary School</li>
+            <li>May,2021</li>
+        </ul>
+        <li>Intermediate</li>
+        <ul>
+            <li>Central Hindu Boys' School</li>
+            <li>March,2023</li>
+        </ul>
+        <li> Bachelor's Degree</li>
+        <ul>
+            <li>IIT Guhawati</li>
+            <li>B.sc (Hons.) in DS and AI</li>
+            <li>Sept,2023 - Present</li>
+        </ul>
+    </ol>
+    <hr>
+    <h3>SKILLS</h3>
+    <ul>
+        <li>Communication</li>
+        <li>C Programming</li>
+        <li>Python</li>
+        <li>Excel</li>
+        <li>Web Development</li>
+    </ul>
+    <hr>
+    <h3>AREA OF INTREST</h3>
+    <ul>
+        <li>Cricket</li>
+        <li>Music</li>
+        <li>Coding</li>
+    </ul>
+    <hr>
+
 
 </body>
 </html>
