About me Section

--- a/index.html
+++ b/index.html
@@ -4,13 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <img src="myphoto.jpeg" alt="Awadh Image">
-<H1>AWADH KISHOR SINGH</H1>
-<!-- Iamge and Contact Details needed here.-->
-<h3>Profile</h3>
-<P>Eager and motivated, I am seeking a challenging entry-level position in tech industry to apply coding skills and knowledge. My goal is to contribute to a dynamic team and grow both professionally and personally.</P>
+    <ul class="Navigation_Bar">
+        <li>>> Awadh Kishor Singh</h1></li>
+        <li>Home </li>
+        <li>About</li>
+        <li>Projects</li>
+        <li>Blogs</li>
+        <li>Contact</li>
+    </ul>
+    <hr>
+    <img src="https://res.cloudinary.com/dnvmqfkd0/image/upload/ar_1:1,b_rgb:ffffff,bo_8px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1707042079/photo1707040283_1_ud0yxd.png" class = "Portfolio_Image" alt="Awadh's Photo">
+
+<!-- Iamge and Contact favicon image Details needed here.-->
+    <h1>Awadh Kishor Singh</h1>
+    <P class="About_me_section">
+        Hello! I'm Awadh Kishor Singh, a student at IIT Guhawati and PW Institute of Innovation. I've embarked on this exciting journey to explore the vast realms of Technology, I'm eager to contribute my skills and enthusiasm to the field.
+    </P>
+    <p class="About_me_section">
+        When not immersed in engineering, you'll find me involved in sports. I believe in a well-rounded approach to life and learning. Connect with me via [Your Professional Email] and check out my <a href="https://www.linkedin.com/in/imawadh/" target="_blank" class="link_font_color"><strong> Linkedin</strong></a> / <a href="https://github.com/imawadh" target="_blank" class="link_font_color"><strong> Github</strong></a> / <a href="https://twitter.com/im_awadh_"target="_blank" class="link_font_color"><strong>Twitter[X]</strong></a>  for a closer look at my journey. Thanks for stopping by, and I look forward to the exciting engineering challenges ahead!
+    </P>
+    <p class="About_me_section">
+        I love coding.
+    </p>
+    <h3>Journey</h3>
+    <!--
+        All the achievement must be here only in about section.
+    -->
 
 
 <hr>
