--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
+    <title>Awadh Kishor Singh - Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Your+Font+Family&display=swap">
 
 </head>
 <body>
     <ul class="Navigation_Bar">
-        <li>>> Awadh Kishor Singh</h1></li>
-        <li>Home </li>
-        <li>About</li>
-        <li>Projects</li>
-        <li>Blogs</li>
-        <li>Contact</li>
+        <li class = 'Left'>>> Awadh Kishor Singh</h1></li>
+        <li class = 'Right'>Home </li>
+        <li class = 'Right'>About</li>
+        <li class = 'Right'>Projects</li>
+        <li class = 'Right'>Blogs</li>
+        <li class = 'Right'>Contact</li>
     </ul>
     <hr>
     <img src="https://res.cloudinary.com/dnvmqfkd0/image/upload/ar_1:1,b_rgb:ffffff,bo_8px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1707042079/photo1707040283_1_ud0yxd.png" class = "Portfolio_Image" alt="Awadh's Photo">
@@ -25,10 +26,10 @@
         Hello! I'm Awadh Kishor Singh, a student at IIT Guhawati and PW Institute of Innovation. I've embarked on this exciting journey to explore the vast realms of Technology, I'm eager to contribute my skills and enthusiasm to the field.
     </P>
     <p class="About_me_section">
-        When not immersed in engineering, you'll find me involved in sports. I believe in a well-rounded approach to life and learning. Connect with me via [Your Professional Email] and check out my <a href="https://www.linkedin.com/in/imawadh/" target="_blank" class="link_font_color"><strong> Linkedin</strong></a> / <a href="https://github.com/imawadh" target="_blank" class="link_font_color"><strong> Github</strong></a> / <a href="https://twitter.com/im_awadh_"target="_blank" class="link_font_color"><strong>Twitter[X]</strong></a>  for a closer look at my journey. Thanks for stopping by, and I look forward to the exciting engineering challenges ahead!
+        When not immersed in engineering, you'll find me involved in sports. I believe in a well-rounded approach to life and learning. Connect with me and check out my <a href="https://www.linkedin.com/in/imawadh/" target="_blank" class="link_font_color"><strong> Linkedin</strong></a> / <a href="https://github.com/imawadh" target="_blank" class="link_font_color"><strong> Github</strong></a> / <a href="https://twitter.com/im_awadh_"target="_blank" class="link_font_color"><strong>Twitter[X]</strong></a>  for a closer look at my journey. Thanks for stopping by, and I look forward to the exciting engineering challenges ahead!
     </P>
     <p class="About_me_section">
-        I love coding.
+        I &#129505 coding.
     </p>
     <h3>Journey</h3>
     <!--
