Update in Portfolio

--- a/index.html
+++ b/index.html
@@ -3,78 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awadh Kishor Singh - Portfolio</title>
+    <title>Awadh Kishor Singh</title>
+    <link rel="shortcut icon" href="Images/photo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Your+Font+Family&display=swap">
-
 </head>
 <body>
-    <ul class="Navigation_Bar">
-        <li class = 'Left'>>> Awadh Kishor Singh</h1></li>
-        <li class = 'Right'>Home </li>
-        <li class = 'Right'>About</li>
-        <li class = 'Right'>Projects</li>
-        <li class = 'Right'>Blogs</li>
-        <li class = 'Right'>Contact</li>
-    </ul>
-    <hr>
-    <img src="https://res.cloudinary.com/dnvmqfkd0/image/upload/ar_1:1,b_rgb:ffffff,bo_8px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1707042079/photo1707040283_1_ud0yxd.png" class = "Portfolio_Image" alt="Awadh's Photo">
+    <header>
+        <nav class="navigation_bar">
+            <div class="mysignature">Awadh</div>
+            <div class="nav_items">
+            <a href="#about">About</a>
+            <a href="#project">Projects</a>
+            <a href="#skills">Skills</a>
+            <a href="#Contact">Connect</a> 
+        </div>
+        </nav>
+    </header>
+    <main>
+        <section id = "about">
+            <img src="Images/photo.jpg" alt="Awadh's Photo">
+            <div class="about_me">
+            <h2>About Me</h2>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident iure, exercitationem magnam dignissimos iusto omnis nam molestiae ut, facere numquam enim nesciunt nobis aspernatur dolorem quod perferendis saepe veritatis consectetur!
+        </div>
+        </section>
+        <hr>
+        <h2 class="heading">Projects</h2>
+        <section id="project">
+            <div class="python_projects">
+                <h3>
+                    Python 
+                </h3>
+                <div class="python_project_images">
+                    <a href="#"><img src="Images/photo.jpg" alt="">Project 1</a>
+                    <a href="#"><img src="Images/photo.jpg" alt="">Project 2</a>
+                    <a href="#"><img src="Images/photo.jpg" alt="">Project 3</a>    
+                </div>
+            </div>
+            <div class="DataScience_projects">
+                <h3>
+                    Data Science
+                </h3>
+                <div class="DataScience_project_images">
+                    <a href="#"><img src="Images/photo.jpg" alt="">Project 1</a>
+                    <a href="#"><img src="Images/photo.jpg" alt="">Project 2</a>
+                    <a href="#"><img src="Images/photo.jpg" alt="">Project 3</a>    
+                </div>
+            </div>
+            <div class="WebDevelopment_projects">
+                <h3>
+                    Web Development
+                </h3>
+                <div class="WebDevelopment_project_images">
+                    <a href="#"><img src="Images/photo.jpg" alt="">Project 1</a>
+                    <a href="#"><img src="Images/photo.jpg" alt="">Project 2</a>
+                    <a href="#"><img src="Images/photo.jpg" alt="">Project 3</a>    
+                </div>
+            </div>
+        </section>
+        <hr>
 
-<!-- Iamge and Contact favicon image Details needed here.-->
-    <h1>Awadh Kishor Singh</h1>
-    <P class="About_me_section">
-        Hello! I'm Awadh Kishor Singh, a student at IIT Guhawati and PW Institute of Innovation. I've embarked on this exciting journey to explore the vast realms of Technology, I'm eager to contribute my skills and enthusiasm to the field.
-    </P>
-    <p class="About_me_section">
-        When not immersed in engineering, you'll find me involved in sports. I believe in a well-rounded approach to life and learning. Connect with me and check out my <a href="https://www.linkedin.com/in/imawadh/" target="_blank" class="link_font_color"><strong> Linkedin</strong></a> / <a href="https://github.com/imawadh" target="_blank" class="link_font_color"><strong> Github</strong></a> / <a href="https://twitter.com/im_awadh_"target="_blank" class="link_font_color"><strong>Twitter[X]</strong></a>  for a closer look at my journey. Thanks for stopping by, and I look forward to the exciting engineering challenges ahead!
-    </P>
-    <p class="About_me_section">
-        I &#129505 coding.
-    </p>
-    <h3>Journey</h3>
-    <!--
-        All the achievement must be here only in about section.
-    -->
-<p>Lets check VS Code Working</p>
+        <section id="skills">
+        <div class="main_skills_heading">
+            <h2>Skills</h2>
+        </div>
+        <div class="sub_heading">
+        <h3>Technical Skills</h3>
+            <div class="name_of_technical_skills">
+                <a href="#"><img src="Images/photo.jpg" alt="C++">C++</a>
+                <a href="#"><img src="Images/photo.jpg" alt="C++">C++</a>
+                <a href="#"><img src="Images/photo.jpg" alt="C++">C++</a>
+                <a href="#"><img src="Images/photo.jpg" alt="C++">C++</a>
+                <a href="#"><img src="Images/photo.jpg" alt="C++">C++</a>
+            </div>
+        <h3>Soft Skills</h3>
+        </div>
 
-<hr>
-<H3>EDUCATION</H3>
-    <ol>
-        <li>Matriculation</li>
-        <ul>
-            <li>P.G Senior Secondary School</li>
-            <li>May,2021</li>
-        </ul>
-        <li>Intermediate</li>
-        <ul>
-            <li>Central Hindu Boys' School</li>
-            <li>March,2023</li>
-        </ul>
-        <li> Bachelor's Degree</li>
-        <ul>
-            <li>IIT Guhawati</li>
-            <li>B.sc (Hons.) in DS and AI</li>
-            <li>Sept,2023 - Present</li>
-        </ul>
-    </ol>
-    <hr>
-    <h3>SKILLS</h3>
-    <ul>
-        <li>Communication</li>
-        <li>C Programming</li>
-        <li>Python</li>
-        <li>Excel</li>
-        <li>Web Development</li>
-    </ul>
-    <hr>
-    <h3>AREA OF INTREST</h3>
-    <ul>
-        <li>Cricket</li>
-        <li>Music</li>
-        <li>Coding</li>
-    </ul>
-    <hr>
+        </section>
+        
+        <section id="connect">Connects</section>
 
-
+    </main>
 </body>
 </html>
