Python Project Update 1

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     Python 
                 </h3>
                 <div class="python_project_images">
-                    <a href="#"><img src="Images/photo.jpg" alt="">Project 1</a>
-                    <a href="#"><img src="Images/photo.jpg" alt="">Project 2</a>
+                    <a href="https://github.com/imawadh/PROJECTS/blob/main/Python/Secure_authentication_system.py"><img src="Images/secure_authentication.png" alt="">Seccure Authentication</a>
+                    <a href="https://github.com/imawadh/PROJECTS/blob/main/Python/library_management_system.py"><img src="Images/library.jpg" alt="">Library Management </a>
                     <a href="#"><img src="Images/photo.jpg" alt="">Project 3</a>    
                 </div>
             </div>
