Connect  section added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awadh Kishor Singh</title>
     <link rel="shortcut icon" href="Images/photo.jpg" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/7642f87fa7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,6 +20,7 @@
         </div>
         </nav>
     </header>
+    <hr>
     <main>
         <section id = "about">
             <img src="Images/photo.jpg" alt="Awadh's Photo">
@@ -29,6 +31,7 @@
         </section>
         <hr>
         <h2 class="heading">Projects</h2>
+        
         <section id="project">
             <div class="python_projects">
                 <h3>
@@ -37,9 +40,10 @@
                 <div class="python_project_images">
                     <a href="https://github.com/imawadh/PROJECTS/blob/main/Python/Secure_authentication_system.py"><img src="Images/secure_authentication.png" alt="Project 1">Seccure Authentication</a>
                     <a href="https://github.com/imawadh/PROJECTS/blob/main/Python/library_management_system.py"><img src="Images/library.jpg" alt="Project 2">Library Management </a>
-                    <a href="#"><img src="Images/photo.jpg" alt="Project 3">EDA on Travel Data</a>    
+                    <a href=""><img src="Images/photo.jpg" alt="Project 3">EDA on Travel Data</a>    
                 </div>
             </div>
+            <hr>
             <div class="DataScience_projects">
                 <h3>
                     Data Science
@@ -50,6 +54,7 @@
                     <a href="#"><img src="Images/photo.jpg" alt="">Project 3</a>    
                 </div>
             </div>
+            <hr>
             <div class="WebDevelopment_projects">
                 <h3>
                     Web Development
@@ -96,7 +101,20 @@
             <div class="main_connect_heading">
                 <h2>Connect</h2>
             </div>
-            div
+            <div class="icons_connect">
+            <div class="twitter icon">
+                <a href="#"><i class="fa-brands fa-twitter"></i>Twitter</a>
+            </div>
+            <div class="linkedin icon">
+                <a href="#"><i class="fa-brands fa-linkedin"></i>Linked In</a>
+            </div>
+            <div class="github icon">
+                <a href="#"><i class="fa-brands fa-github"></i>Github</a>
+            </div>
+            <div class="instagram icon">
+                <a href="#"><i class="fa-brands fa-instagram"></i>Instagram</a>
+            </div>
+        </div>
         </section>
 
     </main>
