Link and Images Updated

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#about">About</a>
             <a href="#project">Projects</a>
             <a href="#skills">Skills</a>
-            <a href="#Contact">Connect</a> 
+            <a href="#connect">Connect</a> 
         </div>
         </nav>
     </header>
@@ -40,7 +40,7 @@
                 <div class="python_project_images">
                     <a href="https://github.com/imawadh/PROJECTS/blob/main/Python/Secure_authentication_system.py"><img src="Images/secure_authentication.png" alt="Project 1">Seccure Authentication</a>
                     <a href="https://github.com/imawadh/PROJECTS/blob/main/Python/library_management_system.py"><img src="Images/library.jpg" alt="Project 2">Library Management </a>
-                    <a href=""><img src="Images/photo.jpg" alt="Project 3">EDA on Travel Data</a>    
+                    <a href="https://github.com/imawadh/PROJECTS/blob/main/Python/PROJECT%20PYTHON%20---%201.ipynb"><img src="Images/travel.png" alt="Project 3">EDA on Travel Data</a>    
                 </div>
             </div>
             <hr>
@@ -49,9 +49,9 @@
                     Data Science
                 </h3>
                 <div class="DataScience_project_images">
-                    <a href="#"><img src="Images/photo.jpg" alt="">Project 1</a>
-                    <a href="#"><img src="Images/photo.jpg" alt="">Project 2</a>
-                    <a href="#"><img src="Images/photo.jpg" alt="">Project 3</a>    
+                    <a href="https://github.com/imawadh/PROJECTS/blob/main/Data%20Science/student_registration.py"><img src="Images/register.jpg" alt="">Student Registration Form </a>
+                    <!-- <a href="#"><img src="Images/" alt="">Project 2</a>
+                    <a href="#"><img src="Images/photo.jpg" alt="">Project 3</a>     -->
                 </div>
             </div>
             <hr>
@@ -60,7 +60,7 @@
                     Web Development
                 </h3>
                 <div class="WebDevelopment_project_images">
-                    <a href="#"><img src="Images/photo.jpg" alt="">Myntra Clone</a>
+                    <a href="https://github.com/imawadh/PROJECTS/tree/main/WEB%20DEVELOPMENT/Myntra%20Clone"><img src="Images/myntra.png" alt="">Myntra Clone</a>
                     <!-- <a href="#"><img src="Images/photo.jpg" alt="">Project 2</a>
                     <a href="#"><img src="Images/photo.jpg" alt="">Project 3</a>     -->
                 </div>
@@ -77,12 +77,14 @@
         </div>
             <div class="name_of_technical_skills">
                 
-                <a href="#"><img src="Images/photo.jpg" alt="C++">C</a>
-                <a href="#"><img src="Images/photo.jpg" alt="C++">C++</a>
-                <a href="#"><img src="Images/photo.jpg" alt="C++">Python</a>
-                <a href="#"><img src="Images/photo.jpg" alt="C++">HTML</a>
-                <a href="#"><img src="Images/photo.jpg" alt="C++">CSS</a>
+                <a href="#"><img src="Images/c.jpg" alt="C++">C</a>
+                <a href="#"><img src="Images/c++.png" alt="C++">C++</a>
+                <a href="#"><img src="Images/python.jpg" alt="C++">Python</a>
+                <a href="#"><img src="Images/html.png" alt="C++">HTML</a>
+                <a href="#"><img src="Images/css.png" alt="C++">CSS</a>
+                <a href="#"><img src="Images/sql.png" alt="SQL">SQL</a>
             </div>
+            <hr>
         <div class="soft_skills_sub_heading">
         <h3>Soft Skills</h3>
         </div>
@@ -103,20 +105,25 @@
             </div>
             <div class="icons_connect">
             <div class="twitter icon">
-                <a href="#"><i class="fa-brands fa-twitter"></i>Twitter</a>
+                <a href="https://twitter.com/im_awadh_" target="_blank"><i class="fa-brands fa-twitter"></i>Twitter</a>
             </div>
             <div class="linkedin icon">
-                <a href="#"><i class="fa-brands fa-linkedin"></i>Linked In</a>
+                <a href="https://www.linkedin.com/in/imawadh/" target="_blank"><i class="fa-brands fa-linkedin"></i>Linked In</a>
             </div>
             <div class="github icon">
-                <a href="#"><i class="fa-brands fa-github"></i>Github</a>
+                <a href="https://github.com/imawadh" target="_blank"><i class="fa-brands fa-github"></i>Github</a>
             </div>
             <div class="instagram icon">
-                <a href="#"><i class="fa-brands fa-instagram"></i>Instagram</a>
+                <a href="https://www.instagram.com/im_awadh_/" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
             </div>
         </div>
         </section>
 
     </main>
+    <hr>
+
+    <footer>
+        <div>This is the footer </Section></div>
+    </footer>
 </body>
 </html>
