--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         </nav>
     </header>
-    <hr>
+    <hr color="red">
     <main>
         <section id = "about">
             <img src="Images/photo.jpg" alt="Awadh's Photo">
@@ -109,7 +109,7 @@
             </div>
             <div class="linkedin icon">
                 <a href="https://www.linkedin.com/in/imawadh/" target="_blank"><i class="fa-brands fa-linkedin"></i>Linked In</a>
-            </div>
+            </div>  
             <div class="github icon">
                 <a href="https://github.com/imawadh" target="_blank"><i class="fa-brands fa-github"></i>Github</a>
             </div>
@@ -123,7 +123,7 @@
     <hr>
 
     <footer>
-        <div>This is the footer </Section></div>
+        <div class="text_footer"> &copy;copyrights All rights are reverserved </div>
     </footer>
 </body>
 </html>
