--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awadh Kishor Singh</title>
-    <link rel="shortcut icon" href="Images/photo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/myphoto.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7642f87fa7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -23,7 +23,7 @@
     <hr color="red">
     <main>
         <section id = "about">
-            <img src="Images/photo.jpg" alt="Awadh's Photo">
+            <img src="Images/myphoto.png" alt="Awadh's Photo">
             <div class="about_me">
             <h2>About Me</h2>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident iure, exercitationem magnam dignissimos iusto omnis nam molestiae ut, facere numquam enim nesciunt nobis aspernatur dolorem quod perferendis saepe veritatis consectetur!
@@ -51,7 +51,7 @@
                 <div class="DataScience_project_images">
                     <a href="https://github.com/imawadh/PROJECTS/blob/main/Data%20Science/student_registration.py"><img src="Images/register.jpg" alt="">Student Registration Form </a>
                     <!-- <a href="#"><img src="Images/" alt="">Project 2</a>
-                    <a href="#"><img src="Images/photo.jpg" alt="">Project 3</a>     -->
+                    <a href="#"><img src="Images/myphoto.png" alt="">Project 3</a>     -->
                 </div>
             </div>
             <hr>
@@ -61,8 +61,8 @@
                 </h3>
                 <div class="WebDevelopment_project_images">
                     <a href="https://github.com/imawadh/PROJECTS/tree/main/WEB%20DEVELOPMENT/Myntra%20Clone"><img src="Images/myntra.png" alt="">Myntra Clone</a>
-                    <!-- <a href="#"><img src="Images/photo.jpg" alt="">Project 2</a>
-                    <a href="#"><img src="Images/photo.jpg" alt="">Project 3</a>     -->
+                    <!-- <a href="#"><img src="Images/myphoto.png" alt="">Project 2</a>
+                    <a href="#"><img src="Images/myphoto.png" alt="">Project 3</a>     -->
                 </div>
             </div>
         </section>
@@ -90,11 +90,11 @@
         </div>
         <div class="name_of_soft_skills">
                 
-            <a href="#"><img src="Images/photo.jpg" alt="C++">Public Speaking</a>
-            <a href="#"><img src="Images/photo.jpg" alt="C++">C++</a>
-            <!-- <a href="#"><img src="Images/photo.jpg" alt="C++">Python</a>
-            <a href="#"><img src="Images/photo.jpg" alt="C++">HTML</a>
-            <a href="#"><img src="Images/photo.jpg" alt="C++">CSS</a> -->
+            <a href="#"><img src="Images/myphoto.png" alt="C++">Public Speaking</a>
+            <a href="#"><img src="Images/myphoto.png" alt="C++">C++</a>
+            <!-- <a href="#"><img src="Images/myphoto.png" alt="C++">Python</a>
+            <a href="#"><img src="Images/myphoto.png" alt="C++">HTML</a>
+            <a href="#"><img src="Images/myphoto.png" alt="C++">CSS</a> -->
         </div>
 
         </section>
