Skills Photo Updated

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         </div>
             <div class="name_of_technical_skills">
                 
-                <a href="#"><img src="Images/c.jpg" alt="C++">C</a>
+                <!-- <a href="#"><img src="Images/c.jpg" alt="C++">C</a> -->
                 <a href="#"><img src="Images/c++.png" alt="C++">C++</a>
-                <a href="#"><img src="Images/python.jpg" alt="C++">Python</a>
+                <a href="#"><img src="Images/python.png" alt="C++">Python</a>
                 <a href="#"><img src="Images/html.png" alt="C++">HTML</a>
                 <a href="#"><img src="Images/css.png" alt="C++">CSS</a>
                 <a href="#"><img src="Images/sql.png" alt="SQL">SQL</a>
