--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     Python 
                 </h3>
                 <div class="python_project_images">
-                    <a href="https://github.com/imawadh/PROJECTS/blob/main/Python/Secure_authentication_system.py"><img src="Images/secure_authentication.png" alt="Project 1">Seccure Authentication</a>
+                    <a href="https://github.com/imawadh/PROJECTS/blob/main/Python/Secure_authentication_system.py"><img src="Images/secure_authentication.jpg" alt="Project 1">Seccure Authentication</a>
                     <a href="https://github.com/imawadh/PROJECTS/blob/main/Python/library_management_system.py"><img src="Images/library.jpg" alt="Project 2">Library Management </a>
-                    <a href="https://github.com/imawadh/PROJECTS/blob/main/Python/PROJECT%20PYTHON%20---%201.ipynb"><img src="Images/travel.png" alt="Project 3">EDA on Travel Data</a>    
+                    <a href="https://github.com/imawadh/PROJECTS/blob/main/Python/PROJECT%20PYTHON%20---%201.ipynb"><img src="Images/travel.jpg" alt="Project 3">EDA on Travel Data</a>    
                 </div>
             </div>
             <hr>
