Change in About Section

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <section id = "about">
             <img src="Images/myphoto.png" alt="Awadh's Photo">
             <div class="about_me">
-            <h2>About Me</h2>
+            <h2>Awadh Kishor Singh</h2>
             <br>
             <h3 class = "subheading">ASPIRING ENGINEER || Student at PWIOI and IIT Guwahati || EX - C.H.S [B.H.U] Student</h3>
             <br>
-            I'm Awadh Kishor Singh, a first-year engineering student passionate about innovation and problem-solving. With a keen interest in hands-on projects and a drive for learning, I'm excited to explore diverse disciplines within the field and make a positive impact through my work. Let's connect and embark on this exciting journey together!
+            A first-year engineering student passionate about innovation and problem-solving. With a keen interest in hands-on projects and a drive for learning, I'm excited to explore diverse disciplines within the field and make a positive impact through my work. Let's connect and embark on this exciting journey together!
         </div>
         </section>
         <hr>
