Olmyics Sql Query

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awadh Kishor Singh</title>
     <link rel="shortcut icon" href="Images/myphoto.png" type="image/x-icon">
+    
     <script src="https://kit.fontawesome.com/7642f87fa7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav class="navigation_bar">
-            <div class="mysignature">Awadh</div>
+            <div class="mysignature"><strong> Awadh </strong></div>
             <div class="nav_items">
             <a href="#about">About</a>
             <a href="#project">Projects</a>
@@ -27,7 +28,7 @@
             <div class="about_me">
             <h2>Awadh Kishor Singh</h2>
             <br>
-            <h3 class = "subheading">ASPIRING ENGINEER || Student at PWIOI and IIT Guwahati || EX - C.H.S [B.H.U] Student</h3>
+            <h3 class = "subheading">Aspiring Engineer || Student at PWIOI and IIT Guwahati || EX - C.H.S [B.H.U] Student</h3>
             <br>
             A first-year engineering student passionate about innovation and problem-solving. With a keen interest in hands-on projects and a drive for learning, I'm excited to explore diverse disciplines within the field and make a positive impact through my work. Let's connect and embark on this exciting journey together!
         </div>
@@ -53,8 +54,8 @@
                 </h3>
                 <div class="DataScience_project_images">
                     <a href="https://github.com/imawadh/PROJECTS/blob/main/Data%20Science/student_registration.py"><img src="Images/register.jpg" alt="">Student Registration Form </a>
-                    <!-- <a href="#"><img src="Images/" alt="">Project 2</a>
-                    <a href="#"><img src="Images/myphoto.png" alt="">Project 3</a>     -->
+                    <a href="https://github.com/imawadh/PROJECTS/blob/main/Data%20Science/olympics.sql"><img src="Images/olympics.png" alt="">Olympics Query</a>
+                    <!-- <a href="#"><img src="Images/myphoto.png" alt="">Project 3</a>     -->
                 </div>
             </div>
             <hr>
