--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </h3>
                 <div class="DataScience_project_images">
                     <a href="https://github.com/imawadh/PROJECTS/blob/main/Data%20Science/student_registration.py"><img src="Images/register.jpg" alt="">Student Registration Form </a>
-                    <a href="https://github.com/imawadh/PROJECTS/blob/main/Data%20Science/olympics.sql"><img src="Images/olympics.png" alt="">Olympics Query</a>
+                    <a href="https://github.com/imawadh/PROJECTS/blob/main/Data%20Science/olympics.sql"><img src="Images/olympics.png" alt="">Olympics SQL Query</a>
                     <!-- <a href="#"><img src="Images/myphoto.png" alt="">Project 3</a>     -->
                 </div>
             </div>
