--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awadh Kishor Singh</title>
-    <link rel="shortcut icon" href="Images/myphoto.png" type="image/x-icon">
+    <link rel="shortcut-icon" href="Images/myphoto.png" type="image/x-icon">
     
     <script src="https://kit.fontawesome.com/7642f87fa7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
@@ -13,12 +13,12 @@
     <header>
         <nav class="navigation_bar">
             <div class="mysignature"><strong> Awadh </strong></div>
-            <div class="nav_items">
-            <a href="#about">About</a>
-            <a href="#project">Projects</a>
-            <a href="#skills">Skills</a>
-            <a href="#connect">Connect</a> 
-        </div>
+                <div class="nav_items">
+                <a href="#about">About</a>
+                <a href="#project">Projects</a>
+                <a href="#skills">Skills</a>
+                <a href="#connect">Connect</a> 
+            </div>
         </nav>
     </header>
     <hr color="red">
@@ -28,7 +28,7 @@
             <div class="about_me">
             <h2>Awadh Kishor Singh</h2>
             <br>
-            <h3 class = "subheading">Aspiring Engineer || Student at PWIOI and IIT Guwahati || EX - C.H.S [B.H.U] Student</h3>
+            <h3 class = "subheading">Aspiring Engineer || Student at  IIT Madras || EX - C.H.S [B.H.U] Student</h3>
             <br>
             A first-year engineering student passionate about innovation and problem-solving. With a keen interest in hands-on projects and a drive for learning, I'm excited to explore diverse disciplines within the field and make a positive impact through my work. Let's connect and embark on this exciting journey together!
         </div>
