--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awadh Kishor Singh</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    
+    <link rel="stylesheet" href="../Web Development/PWIOI/Projects/Fashion Store/node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../Web Development/PWIOI/Projects/Fashion Store/node_modules/bootstrap/dist/css/bootstrap.css">
     <style>
         *{
             margin: 0;
-            padding: 0;
+            padding : 0;
         }
         .CodeSection{
             background-color: black;
@@ -122,7 +123,6 @@
 
         <!-- Home Section -->
 
-
         <section class="mt-4 HomeSection align-items-center mb-3" id="Home">
             <div class="aboutme">
                 <h1 class="bold ">Awadh Kishor Singh</h1>
@@ -131,7 +131,7 @@
             </div>
             <div>
                 <figure>
-                    <img src="public/Images/myphoto.png" alt="My Photo" class="rounded-circle" id="myphoto">
+                    <img src="./media/Images/my_image.jpg" alt="My Photo" class="rounded-circle" id="myphoto">
                 </figure>
             </div>
 
@@ -150,11 +150,11 @@
             <ul class="list-unstyled">
                 <li ><a href="javascript:void()" class="bi bi-github text-decoration-none text-primary d-block"></a>
                 <span class="text-primary">GitHub</span></li>
-                <li ><a href="javascript:void()" class="bi bi-code text-decoration-none text-light d-block"></a><span class="text-light">LeetCode</span></li>
-                <li ><a href="javascript:void()" class="bi bi-code text-decoration-none text-danger d-block"></a><span class="text-danger">CodeForces</span></li>
+                <li ><a href="javascript:void()" class="bi bi-code-square text-decoration-none text-light d-block"></a><span class="text-light">LeetCode</span></li>
+                <li ><a href="javascript:void()" class="bi bi-code-slash text-decoration-none text-danger d-block"></a><span class="text-danger">CodeForces</span></li>
                 <li ><a href="javascript:void()" class="bi bi-code text-decoration-none text-success d-block"></a><span class="text-success">CodeChef</span></li>
-                <li ><a href="javascript:void()" class="bi bi-code text-decoration-none text-light d-block"></a><span class="text-white">AtCoder</span></li>
-                <li ><a href="javascript:void()" class="bi bi-code text-decoration-none text-warning d-block"></a><span class="text-warning">GeeksForGeek</span></li>
+                <li ><a href="javascript:void()" class="bi bi-code-square text-decoration-none text-light d-block"></a><span class="text-white">AtCoder</span></li>
+                <li ><a href="javascript:void()" class="bi bi-code-slash text-decoration-none text-warning d-block"></a><span class="text-warning">GeeksForGeek</span></li>
             </ul>
         </section>
 
@@ -179,6 +179,10 @@
         </section>
 
     </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
