--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
             <div>
                 <figure>
-                    <img src="./media/Images/my_image.jpg" alt="My Photo" class="rounded-circle" id="myphoto">
+                    <img src="public/Images/myphoto.png" alt="My Photo" class="rounded-circle" id="myphoto">
                 </figure>
             </div>
 
