OG Content Added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content=" Awadh Kishor Singh | IIT Madras'28 | CHS'23 | Aspiring Engineer passionate about Web Development, Data Science & Competitive Programming. Explore my projects, skills, and achievements." />
+    <meta property="og:description" content="IIT Madras'28 | CHS'23 | Aspiring Engineer passionate about Web Development, Data Science & Competitive Programming. Explore my projects, skills, and achievements.">
+    <meta property="og:title" content="Awadh Kishor Singh - Portfolio Website">
+    <meta property="og:image" content="myphoto.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
